[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.4.0", features = ["llvm16-0"] }
nom = "7.1.3"



[dependencies.llvm-sys]
version = "160.1.4"
features = ["prefer-dynamic"]
